// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile e huge 1`] = `
<style>
.IS1 {
  width: 100%;
  margin-bottom: 10px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: null;
}

.IS5 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <View
    className="IS5"
  >
    <View>
      <View>
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <Text
          className="IS4"
          numberOfLines={2}
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile e medium 1`] = `
<style>
.IS1 {
  width: 100%;
  margin-bottom: 10px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: null;
}

.IS5 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "padding": "10px",
      "paddingTop": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <View
    className="IS5"
  >
    <View>
      <View>
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <Text
          className="IS4"
          numberOfLines={2}
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile e small 1`] = `
<style>
.IS1 {
  width: 50%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: null;
}

.IS5 {
  padding-left: 10px;
  padding-bottom: 5px;
}

.IS6 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <View
    className="IS6"
  >
    <View>
      <View
        className="IS5"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <Text
          className="IS4"
          numberOfLines={2}
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile e wide 1`] = `
<style>
.IS1 {
  width: 100%;
  margin-bottom: 10px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: null;
}

.IS5 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <View
    className="IS5"
  >
    <View>
      <View>
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <Text
          className="IS4"
          numberOfLines={2}
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile e without breakpoint should be like small 1`] = `
<style>
.IS1 {
  width: 50%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: null;
}

.IS5 {
  padding-left: 10px;
  padding-bottom: 5px;
}

.IS6 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <View
    className="IS6"
  >
    <View>
      <View
        className="IS5"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <Text
          className="IS4"
          numberOfLines={2}
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;
